--- a/xiaoxia_yin_interview_docs.ipynb
+++ b/xiaoxia_yin_interview_docs.ipynb
@@ -45,7 +45,7 @@
         "\n",
         "\n",
         "1.   Go to the [Workspace settings](https://app.labelbox.com/workspace-settings/api-keys) page of your Labelbox app and select **API keys**.\n",
-        "2.   Select **New API key**\n",
+        "2.   Select **New API key**.\n",
         "3.   In the **Create new API key** prompt, enter a descriptive name for your API key and then select **Create**.\n",
         "4.   In the **API key created** prompt, use the **Copy** button to copy the key.\n",
         "5.   Save the API key in a safe location that you can access when importing the data.\n"
@@ -192,7 +192,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Step 4: Run the Importing Script\n",
+        "## Step 4: Execute Data Import\n",
         "Run the following script to import the dataset:"
       ],
       "metadata": {
